--- a/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-042-003-321953">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.13 <date>2023</date>
+                <edition>v 1.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -191,6 +191,9 @@
                 <change who="#martina-cotter" when="2023-08-01T18:02:58.011Z" type="text-version" status="1.0.13" xml:id="UT22084-042-003-321995">
                     <desc>Remove initial &lt;p&gt; elements that only contain folio references.</desc>
                 </change>
+                <change who="#john" when="2023-10-11T17:12:40.857Z" type="text-version" status="1.0.14" xml:id="UT22084-042-003-321996">
+                    <desc>Terminology edit (reassurance to things that invigorate)</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -213,6 +216,7 @@
                 <p tid="5">The translation was completed under the patronage and supervision of 84000: Translating the Words of the Buddha.</p>
             </div>
             <div type="introduction">
+                <head type="introduction" tid="477">Introduction</head>
                 <div type="section" xml:id="UT22084-042-003-introduction-1">
                     <head type="section" tid="6">The Text</head>
                     <milestone unit="chunk" xml:id="UT22084-042-003-3"/>
@@ -883,9 +887,9 @@
                         </l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-042-003-120"/>
-                    <p tid="98">“Rāṣṭrapāla, there are four reassurances for bodhisattvas. What are these four? They are attaining retention, finding
+                    <p tid="98">“Rāṣṭrapāla, there are four things that invigorate bodhisattvas. What are these four? They are attaining retention, finding
                         a spiritual friend, being receptive to the profound Dharma, and the correct application of completely pure discipline.
-                        Raṣṭrapāla, these four are the reassurances for bodhisattvas. This is how it is. About that, it is said:</p>
+                        Raṣṭrapāla, these four are the things that invigorate bodhisattvas. This is how it is. About that, it is said:</p>
                     <milestone unit="chunk" xml:id="UT22084-042-003-121"/>
                     <lg tid="99">
                         <l> “Those of great renown possess retention,</l>
@@ -5261,7 +5265,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">nāga</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">klu</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཀླུ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A class of nonhuman beings who live in aquatic environments and who are said to hoard wealth and
                                 esoteric teachings. They are associated with snakes and serpents.</p>
                             </note>
@@ -6322,7 +6326,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">brahmā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">tshangs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཚངས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the primary deities of the Purāṇic Hindu pantheon, and perhaps the first to take on the
                                 status formerly held by the cosmic being Prajāpati in the literature of the brāhmaṇas. As a creator god in the
                                 Purāṇas, Brahmā is said to have pronounced the mantras of four Vedas from each of his four faces and thus established
@@ -6349,8 +6353,8 @@
                         <gloss type="person" xml:id="UT22084-042-003-843">
                             <term type="translationMain">Dānaśīla</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">dānaśīla</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">da na shi la</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ད་ན་ཤི་ལ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dA na shI la</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">དཱ་ན་ཤཱི་ལ།</term>
                             <note type="definition">
                                 <p>An Indian paṇḍita who was resident in Tibet during the late eighth and early ninth
                                 centuries.</p>
@@ -6691,7 +6695,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śakra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བརྒྱ་བྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The lord of the gods. Also known as Indra, the deity who is called “lord of the devas” dwells on the summit of Mount Sumeru and wields the thunderbolt. The Tibetan translation <foreign xml:lang="Bo-Ltn" type="term">brgya byin</foreign> (meaning “one hundred sacrifices”) follows the traditional Sanskrit semantic gloss that <foreign xml:lang="Sa-Ltn" type="term">śakra</foreign> is an abbreviation of <foreign xml:lang="Sa-Ltn" type="term">śata-kratu</foreign>, one who has performed a hundred sacrifices. Each world with a central Sumeru has a Śakra.</p>
                             </note>
                         </gloss>
@@ -7027,8 +7031,8 @@
                         <gloss xml:id="UT22084-042-003-904" type="place" mode="match">
                             <term type="translationMain">Ganges</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">gaṅgā</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang ga</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">གང་ག</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang gA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">གང་གཱ།</term>
                             <note type="definition" rend="override">
                                 <p>Name of a river.</p>
                             </note>
@@ -7094,7 +7098,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">rājagṛha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal po’i khab</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་པོའི་ཁབ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Name of the chief city in Magadha.</p>
                             </note>
                         </gloss>
