--- a/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-042-003-321953">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.14 <date>2023</date>
+                <edition>v 1.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -193,6 +193,9 @@
                 </change>
                 <change who="#john" when="2023-10-11T17:12:40.857Z" type="text-version" status="1.0.14" xml:id="UT22084-042-003-321996">
                     <desc>Terminology edit (reassurance to things that invigorate)</desc>
+                </change>
+                <change who="#john" when="2023-10-11T18:34:29.334Z" type="text-version" status="1.0.15" xml:id="UT22084-042-003-321997">
+                    <desc>Further improvement: influences that inspire.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -887,9 +890,9 @@
                         </l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-042-003-120"/>
-                    <p tid="98">“Rāṣṭrapāla, there are four things that invigorate bodhisattvas. What are these four? They are attaining retention, finding
+                    <p tid="98">“Rāṣṭrapāla, there are four influences that inspire bodhisattvas. What are these four? They are attaining retention, finding
                         a spiritual friend, being receptive to the profound Dharma, and the correct application of completely pure discipline.
-                        Raṣṭrapāla, these four are the things that invigorate bodhisattvas. This is how it is. About that, it is said:</p>
+                        Raṣṭrapāla, these are the four influences that inspire bodhisattvas. This is how it is. About that, it is said:</p>
                     <milestone unit="chunk" xml:id="UT22084-042-003-121"/>
                     <lg tid="99">
                         <l> “Those of great renown possess retention,</l>
