--- a/translations/kangyur/placeholders/057-005_toh146-the_sutra_teaching_the_miracles_in_the_domain_of_skillful_means_that_the_bodhisattvas_have_at_their_disposition.xml
+++ b/translations/kangyur/placeholders/057-005_toh146-the_sutra_teaching_the_miracles_in_the_domain_of_skillful_means_that_the_bodhisattvas_have_at_their_disposition.xml
@@ -12,14 +12,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bden pa po'i le'u zhes bya ba'i chos kyi rnam grangs</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa'i spyod yul thabs kyi yul la rnam par 'phrul pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bden pa po'i le'u</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
+                <author role="translatorMain" xml:id="UT22084-057-005-1"/>
+                <author role="translatorEng" xml:id="UT22084-057-005-2">Ana Cristina Lopes</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-057-005"/>
                 <date/>
             </publicationStmt>
@@ -34,14 +35,33 @@
                     <idno source-id="O1JC114941JC11735" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-25T10:57:28.76Z" user="admin">25/08/2022 10:57:28</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-01T09:43:18.064Z" user="john">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-16T15:04:56.733Z" user="john">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:54:59.733Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-25T10:54:59.733Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-25T10:57:20.609Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2020-09-01T09:43:18.064Z" type="text-version" status="0.0.1" xml:id="UT22084-057-005-3">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#john" when="2022-08-16T15:04:56.733Z" type="text-version" status="0.0.2" xml:id="UT22084-057-005-4">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:54:59.733Z" type="translation-status" status="3" xml:id="UT22084-057-005-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:54:59.733Z" type="text-version" status="0.0.3" xml:id="UT22084-057-005-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:57:20.609Z" type="text-version" status="0.0.4" xml:id="UT22084-057-005-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-057-005-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:08:53.401Z" type="translation-status" status="2.h" xml:id="UT22084-057-005-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:08:53.401Z" type="text-version" status="0.0.6" xml:id="UT22084-057-005-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
