--- a/translations/kangyur/placeholders/061-007_toh187-the_teaching_on_the_inconceivable_properties_of_the_buddhas.xml
+++ b/translations/kangyur/placeholders/061-007_toh187-the_teaching_on_the_inconceivable_properties_of_the_buddhas.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabuddhadharmācintyanirdeśa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">[Note: according to the dkar chag, this text is "known to be an extract of the 29th chapter of the Avataṃsaka." This should read the 39th chapter, which has the same title and appears to be close but not identical.]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi chos kyi bsam gyis mi khyab pa bstan pa</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
+                <author role="translatorMain" xml:id="UT22084-061-007-1"/>
+                <author role="translatorEng" xml:id="UT22084-061-007-2">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-061-007"/>
                 <date/>
             </publicationStmt>
@@ -33,14 +34,33 @@
                     <idno source-id="O1JC114941JC11806" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-25T10:50:27.213Z" user="admin">25/08/2022 10:50:27</note>
-                <note type="updated" update="text-version" value="" date-time="2019-03-09T18:26:48.204Z" user="john"/>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:49:24.96Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T10:49:24.96Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-25T10:50:18.911Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-03-09T18:26:48.204Z" type="text-version" status="" xml:id="UT22084-061-007-3">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-061-007-4">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:49:24.96Z" type="translation-status" status="3" xml:id="UT22084-061-007-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:49:24.96Z" type="text-version" status="0.0.2" xml:id="UT22084-061-007-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:50:18.911Z" type="text-version" status="0.0.3" xml:id="UT22084-061-007-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-061-007-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:10:25.971Z" type="translation-status" status="2.g" xml:id="UT22084-061-007-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:10:25.971Z" type="text-version" status="0.0.5" xml:id="UT22084-061-007-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
