--- a/translations/kangyur/placeholders/037-001_toh44-39-chapter_39_the_teaching_on_the_inconceivability_of_the_buddhadharma.xml
+++ b/translations/kangyur/placeholders/037-001_toh44-39-chapter_39_the_teaching_on_the_inconceivability_of_the_buddhadharma.xml
@@ -8,16 +8,17 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sang rgyas chos bsam mi khyab bstan pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">[Note: see Toh 187, which is close but not identical.]</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《佛不思議法品》</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
-                <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
+                <author role="translatorMain" xml:id="UT22084-037-001-1"/>
+                <author role="translatorEng" xml:id="UT22084-037-001-2">Ana Cristina Lopes</author>
+                <sponsor xml:id="UT22084-037-001-3">Thirty, Twenty</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-037-001"/>
                 <date/>
             </publicationStmt>
@@ -32,17 +33,42 @@
                     <idno source-id="O1JC114941JC14707" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-25T10:48:05.404Z" user="admin">25/08/2022 10:48:05</note>
-                <note type="updated" update="text-version" value="" date-time="2019-03-09T18:28:00.74Z" user="john"/>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-17T02:19:46.003Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-11T05:18:58.546Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-29T15:53:35.789Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:47:21.759Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-25T10:47:21.759Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-25T10:48:03.241Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-03-09T18:28:00.74Z" type="text-version" status="" xml:id="UT22084-037-001-4">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-037-001-5">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#amy" when="2021-03-17T02:19:46.003Z" type="text-version" status="0.0.2" xml:id="UT22084-037-001-6">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2021-05-11T05:18:58.546Z" type="text-version" status="0.0.3" xml:id="UT22084-037-001-7">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-29T15:53:35.789Z" type="text-version" status="0.0.4" xml:id="UT22084-037-001-8">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:47:21.759Z" type="translation-status" status="3" xml:id="UT22084-037-001-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:47:21.759Z" type="text-version" status="0.0.5" xml:id="UT22084-037-001-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:48:03.241Z" type="text-version" status="0.0.6" xml:id="UT22084-037-001-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-037-001-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:11:08.358Z" type="translation-status" status="2.h" xml:id="UT22084-037-001-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:11:08.358Z" type="text-version" status="0.0.8" xml:id="UT22084-037-001-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
