--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">me tog brtsegs pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">puṣpakūṭadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Heap of Flowers</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa me tog brtsegs pa zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">puṣpakūṭadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">me tog brtsegs pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapuṣpakūṭanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa me tog brtsegs pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapuṣpakūṭanāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-088-010-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-010-2">Gergely Hidas</author>
+                <author role="translatorEng" xml:id="UT22084-088-010-3">Péter-Dániel Szántó</author>
+                <consultant role="projectManager" xml:id="UT22084-088-010-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-010"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +43,54 @@
                     <idno source-id="O1JC114941JC12648" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-24T10:50:05.582Z" user="admin">24/07/2023 10:50:05</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="" date-time="2023-05-11T13:33:02.339Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:33:02.339Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:21:41.373Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-30T11:21:41.373Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T10:50:01.32Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-07-24T10:50:01.32Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-01-20T13:13:58.019Z" type="translation-status" status="4" xml:id="UT22084-088-010-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-20T13:13:58.019Z" type="text-version" status="0.0.1" xml:id="UT22084-088-010-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:33:02.339Z" type="translation-status" status="" xml:id="UT22084-088-010-7">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:33:02.339Z" type="text-version" status="0.0.2" xml:id="UT22084-088-010-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-30T11:21:41.373Z" type="translation-status" status="4" xml:id="UT22084-088-010-9">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-30T11:21:41.373Z" type="text-version" status="0.0.3" xml:id="UT22084-088-010-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:50:01.32Z" type="translation-status" status="3" xml:id="UT22084-088-010-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:50:01.32Z" type="text-version" status="0.0.4" xml:id="UT22084-088-010-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:51:04.842Z" type="text-version" status="0.0.5" xml:id="UT22084-088-010-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:51:18.739Z" type="text-version" status="0.0.6" xml:id="UT22084-088-010-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:52:15.421Z" type="text-version" status="0.0.7" xml:id="UT22084-088-010-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:20:29.224Z" type="text-version" status="0.0.8" xml:id="UT22084-088-010-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.9" xml:id="UT22084-088-010-17">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:11:56.095Z" type="translation-status" status="2.h" xml:id="UT22084-088-010-18">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-12T13:11:56.095Z" type="text-version" status="0.0.10" xml:id="UT22084-088-010-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
