--- a/translations/kangyur/translations/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/translations/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-068-003-236">Rory Lindsay</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -159,6 +159,9 @@
                 <change who="#martina-cotter" when="2023-10-11T12:11:49.353Z" type="text-version" status="1.0.0" xml:id="UT22084-068-003-239">
                     <desc>First published version</desc>
                 </change>
+                <change who="#john" when="2023-10-12T14:00:23.956Z" type="text-version" status="1.0.1" xml:id="UT22084-068-003-240">
+                    <desc>Shortened summary.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -170,26 +173,22 @@
                         <div type="summary">
                                 <head type="summary" tid="1">Summary</head>
                                 <milestone unit="chunk" xml:id="UT22084-068-003-60"/>
-                                <p tid="2">In <title xml:lang="en">Dispelling the Darkness of the
-                                                Ten Directions</title>, the Śākya youth Shining
-                                        Countenance, setting out from the city of Kapilavastu in his
-                                        chariot, encounters the Buddha, who is approaching the city.
-                                        When Shining Countenance requests the Buddha to teach him a
-                                        rite of protection from harm, the Buddha proceeds to
-                                        describe ten buddhas, each dwelling in a distant world
-                                        system in one of the ten directions, explaining to the youth
-                                        that if he keeps in mind whichever of those thus-gone ones
-                                        is appropriate when departing from the city in their
-                                        respective directions, he will be free from fear and harm
-                                        when traveling and will accomplish his purpose. After the
-                                        Buddha gives this teaching, Shining Countenance and the
+                                <p tid="2">As the Buddha approaches Kapilavastu, he is met by the Śākya youth Shining
+                                        Countenance setting out from the city in his
+                                        chariot. Shining Countenance requests the Buddha to teach him a
+                                        rite of protection from harm, and the Buddha describes ten 
+                                        buddhas, each dwelling in a distant world
+                                        system in one of the ten directions. When departing from the city in one
+                                        of the directions, he explains, keeping the respective 
+                                        buddha in mind will ensure freedom from fear and harm
+                                        while traveling and success in the journey’s purpose. After 
+                                        receiving this teaching, Shining Countenance and the
                                         others in the assembly are able to see those ten buddhas and
-                                        their realms directly before their eyes, and the Buddha
+                                        their realms directly before them, and the Buddha
                                         prophesies their eventual awakening. The Buddha further
-                                        explains that someone who merely reads, teaches, or writes
-                                        down and keeps this teaching with them will similarly be
-                                        free from fear and harm and will pass away peacefully at the
-                                        end of their life. This sūtra is often chanted at the
+                                        explains that to read, teach, write
+                                        down, and keep this sūtra will bring
+                                        protection to all; it is consequently often chanted at the
                                         beginning of undertakings, especially travel, to overcome
                                         obstacles and bring success.</p>
                         </div>
