--- a/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
+++ b/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
@@ -10,18 +10,19 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāśokadattavyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">ārya aśokadattavyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mya ngan med kyis byin pa lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-043-013-1"/>
+                <author role="translatorMain" xml:id="UT22084-043-013-1">UCSB Buddhist Studies Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-013-2">ErdeneBaatar Erdene-Ochir</author>
                 <author role="translatorEng" xml:id="UT22084-043-013-3">Jed Forman</author>
                 <consultant role="projectManager" xml:id="UT22084-043-013-4">Jed Forman</consultant>
                 <editor role="projectEditor" xml:id="UT22084-043-013-5">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-043-013-24">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-043-013"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +76,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T13:47:04.908Z" type="text-version" status="0.0.9" xml:id="UT22084-043-013-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T10:57:14.902Z" type="text-version" status="0.0.10" xml:id="UT22084-043-013-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T10:58:01.655Z" type="translation-status" status="2.d" xml:id="UT22084-043-013-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T10:58:01.655Z" type="text-version" status="0.0.11" xml:id="UT22084-043-013-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
