--- a/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
+++ b/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
@@ -4,24 +4,25 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bu mo blo gros bzang mos zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sumatidārikāparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Girl Sumati's Questions</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo blo gros bzang mos zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sumatidārikāparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bu mo blo gros bzang mos zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasumatidārikā­paripṛcchā­nāmamahāyānasūtra</title>
-                <author role="translatorMain" xml:id="UT22084-043-011-1"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo blo gros bzang mos zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-043-011-1">Dharmasagara Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-011-2">Rebecca Hufen</author>
                 <consultant role="projectManager" xml:id="UT22084-043-011-3">Rebecca Hufen</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-043-011-4">Raktrul Ngawang Kunga Rinpoche (Pema Dorjee)</consultant>
                 <editor role="reviser" xml:id="UT22084-043-011-5">Jason Sanche</editor>
+                <editor role="projectEditor" xml:id="UT22084-043-011-21">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-043-011"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +67,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-07T13:36:42.5Z" type="text-version" status="0.0.6" xml:id="UT22084-043-011-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T08:12:50.296Z" type="text-version" status="0.0.7" xml:id="UT22084-043-011-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T11:02:01.612Z" type="translation-status" status="2.f" xml:id="UT22084-043-011-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T11:02:01.612Z" type="text-version" status="0.0.8" xml:id="UT22084-043-011-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
