--- a/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-059-013-31">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-059-013"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +99,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-02T09:00:54.806Z" type="text-version" status="0.0.13" xml:id="UT22084-059-013-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T11:06:22.058Z" type="translation-status" status="2.c" xml:id="UT22084-059-013-35">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T11:06:22.058Z" type="text-version" status="0.0.14" xml:id="UT22084-059-013-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
