--- a/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -17,12 +17,12 @@
                 <editor role="copyEditor" xml:id="UT22084-043-010-6">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2023</date>
+                <edition>v 0.1.12 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-043-010"/>
                 <date/>
             </publicationStmt>
@@ -97,6 +97,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-29T15:08:14.368Z" type="text-version" status="0.1.11" xml:id="UT22084-043-010-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T11:10:04.364Z" type="translation-status" status="2.c" xml:id="UT22084-043-010-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-13T11:10:04.364Z" type="text-version" status="0.1.12" xml:id="UT22084-043-010-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
