--- a/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Gaṅgottara's Questions</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">gaṅgottaraparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Gaṅgottaraparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gang gA'i zhus pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṅgottara­paripṛcchā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryagaṅgottara­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gang gA'i mchog gis zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-043-012-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-043-012-2">Sophie McGrath</author>
@@ -15,12 +15,12 @@
                 <editor role="copyEditor" xml:id="UT22084-043-012-24">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-043-012"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +95,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-10T08:51:28.974Z" type="text-version" status="0.0.13" xml:id="UT22084-043-012-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-16T08:38:24.328Z" type="translation-status" status="2.c" xml:id="UT22084-043-012-28">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-16T08:38:24.328Z" type="text-version" status="0.0.14" xml:id="UT22084-043-012-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
