--- a/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Prophecy Concerning Brahmaśrī</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">brahmaśrīvyākaraṇasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Brahmaśrīvyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa'i dpal lung bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryabrahmaśrīvyākaraṇa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryabrahmaśrīvyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pa'i dpal lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-061-009-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-061-009-2">Sophie McGrath</author>
@@ -15,12 +15,12 @@
                 <editor role="copyEditor" xml:id="UT22084-061-009-24">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-061-009"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +95,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-10T08:55:36.38Z" type="text-version" status="0.0.13" xml:id="UT22084-061-009-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-16T08:39:49.636Z" type="translation-status" status="2.c" xml:id="UT22084-061-009-28">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-16T08:39:49.636Z" type="text-version" status="0.0.14" xml:id="UT22084-061-009-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
