--- a/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-015-114">Ryan Damron</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -41,7 +41,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -181,6 +181,15 @@
                 </change>
                 <change who="#andre" when="2023-09-11T20:41:45.337Z" type="text-version" status="1.0.1" xml:id="UT22084-034-015-118">
                     <desc>Glossary matching revised - Activated in CG</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.2" xml:id="UT22084-034-015-119">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#sameer" when="2023-10-16T08:54:55.467Z" type="translation-status" status="1" xml:id="UT22084-034-015-120">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-10-16T08:54:55.467Z" type="text-version" status="1.0.3" xml:id="UT22084-034-015-121">
+                    <desc>Included in App v 3.7</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
