--- a/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-016-131">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.2 <date>2023</date>
+                <edition>v 1.1.4 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -40,7 +40,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -195,6 +195,15 @@
                 </change>
                 <change who="#andre" when="2023-09-11T20:58:51.814Z" type="text-version" status="1.1.2" xml:id="UT22084-034-016-138">
                     <desc>Glossary matching revised - activated in CG</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.1.3" xml:id="UT22084-034-016-139">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#sameer" when="2023-10-16T09:13:55.875Z" type="translation-status" status="1" xml:id="UT22084-034-016-140">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-10-16T09:13:55.875Z" type="text-version" status="1.1.4" xml:id="UT22084-034-016-141">
+                    <desc>Included in App v 3.7</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -643,8 +652,8 @@
                         <gloss type="place" xml:id="UT22084-034-016-68">
                             <term type="translationMain">Magadha</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">magadha</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ma ga dha</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མ་ག་དྷ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ma ga dhA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མ་ག་དྷཱ།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2" status="verified">ma ga ta</term>
                             <term xml:lang="bo" type="attestedSource" n="2" status="verified">མ་ག་ཏ།</term>
                         </gloss>
