--- a/translations/kangyur/translations/072-005_toh305-sutra_of_the_highest_designation.xml
+++ b/translations/kangyur/translations/072-005_toh305-sutra_of_the_highest_designation.xml
@@ -21,7 +21,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-005-155">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -29,7 +29,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -145,6 +145,15 @@
                 </change>
                 <change who="#martina-cotter" when="2023-09-05T16:33:04.728Z" type="text-version" status="1.0.0" xml:id="UT22084-072-005-158">
                     <desc>First published version</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.1" xml:id="UT22084-072-005-159">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#sameer" when="2023-10-16T10:00:47.401Z" type="translation-status" status="1" xml:id="UT22084-072-005-160">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-10-16T10:00:47.401Z" type="text-version" status="1.0.2" xml:id="UT22084-072-005-161">
+                    <desc>Included in App v 3.7</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
