--- a/translations/kangyur/placeholders/061-007_toh187-the_teaching_on_the_inconceivable_properties_of_the_buddhas.xml
+++ b/translations/kangyur/placeholders/061-007_toh187-the_teaching_on_the_inconceivable_properties_of_the_buddhas.xml
@@ -5,21 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Teaching on the Inconceivable Properties of the Buddhas</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">buddhadharmācintyanirdeśa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Buddhadharmācintyanirdeśa</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi chos kyi bsam gyis mi khyab pa bstan pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryabuddhadharmācintyanirdeśa</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryabuddhadharmācintyanirdeśa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">[Note: according to the dkar chag, this text is "known to be an extract of the 29th chapter of the Avataṃsaka." This should read the 39th chapter, which has the same title and appears to be close but not identical.]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi chos kyi bsam gyis mi khyab pa bstan pa</title>
                 <author role="translatorMain" xml:id="UT22084-061-007-1"/>
                 <author role="translatorEng" xml:id="UT22084-061-007-2">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-061-007"/>
                 <date/>
             </publicationStmt>
@@ -58,6 +58,12 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-12T13:10:25.971Z" type="text-version" status="0.0.5" xml:id="UT22084-061-007-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-16T10:17:21.539Z" type="translation-status" status="2.h" xml:id="UT22084-061-007-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-16T10:17:21.539Z" type="text-version" status="0.0.6" xml:id="UT22084-061-007-12">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
