--- a/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-015-114">Ryan Damron</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -190,6 +190,9 @@
                 </change>
                 <change who="#sameer" when="2023-10-16T08:54:55.467Z" type="text-version" status="1.0.3" xml:id="UT22084-034-015-121">
                     <desc>Included in App v 3.7</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-20T14:17:27.646Z" type="text-version" status="1.0.4" xml:id="UT22084-034-015-122">
+                    <desc>Added pending links.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
