--- a/translations/kangyur/translations/066-007_toh249-the_sutra_teaching_four_factors.xml
+++ b/translations/kangyur/translations/066-007_toh249-the_sutra_teaching_four_factors.xml
@@ -31,7 +31,7 @@
                     Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.6.1 <date>2023</date>
+                <edition>v 1.6.3 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -139,6 +139,12 @@
                 <change who="#john" when="2023-08-14T14:22:27.584Z" type="text-version" status="1.6.1" xml:id="UT22084-066-007-143">
                     <desc>Updated intro, notes, and biblio to include references to now published Toh 250 and 251.</desc>
                 </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.6.2" xml:id="UT22084-066-007-144">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-20T14:21:38.782Z" type="text-version" status="1.6.3" xml:id="UT22084-066-007-145">
+                    <desc>Added pending links.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -191,7 +197,7 @@
                             </title>.</note> identifies
                         four factors of the path which bodhisattvas must not abandon under any
                         circumstance. Two further works, <title xml:lang="en">The Accomplishment of the Sets of Four Qualities: 
-                            The Bodhisattvas’ Prātimokṣa</title> (Toh 248)<tei:ref rend="pending" target="http://read.84000.co/translation/toh250.html"/> 
+                            The Bodhisattvas’ Prātimokṣa</title> (Toh 248)<tei:ref rend="pending" target="http://read.84000.co/translation/toh248.html"/> 
                         and <title xml:lang="en">The Fourfold Accomplishment</title> (Toh 252)<note place="end" xml:id="UT22084-066-007-66">Dharmachakra 
                             Translation Committee, trans. <title xml:lang="en">
                                 <tei:ref target="https://read.84000.co/translation/toh252.html">The 
@@ -530,7 +536,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">maitreya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">byams pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱམས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Bodhisattva of loving kindness; the next buddha
                                 to follow Śakyāmuni.</p>
                             </note>
@@ -553,7 +559,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śakra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བརྒྱ་བྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>An alternative name for Indra, lord of the gods,
                                 who, according to Buddhist cosmology, resides in the Heaven of the
                                 Thirty-Three.</p>
