--- a/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-009-274">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -186,6 +186,12 @@
                 </change>
                 <change who="#sameer" when="2023-09-16T08:34:11.42Z" type="text-version" status="1.0.3" xml:id="UT22084-066-009-278">
                     <desc>Included in App v 3.6</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.4" xml:id="UT22084-066-009-279">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-20T14:22:31.012Z" type="text-version" status="1.0.5" xml:id="UT22084-066-009-280">
+                    <desc>Added pending links.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -701,7 +707,7 @@ sūtra</title>) is
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śrāvastī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mnyan yod</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མཉན་ཡོད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The capital of the ancient
                                                   Kosala kingdom in India.</p>
                             </note>
