--- a/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-005-992">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.10 <date>2023</date>
+                <edition>v 1.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -153,6 +153,12 @@
                 <change who="#andre" when="2023-10-04T16:14:24.691Z" type="text-version" status="1.0.10" xml:id="UT22084-090-005-999">
                     <desc>Glossary revised again</desc>
                 </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.11" xml:id="UT22084-090-005-1000">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-20T14:37:37.566Z" type="text-version" status="1.0.12" xml:id="UT22084-090-005-1005">
+                    <desc>Added pending links.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -206,8 +212,16 @@
                                     of the Great Trichiliocosm</ref>
                             </title>, Toh 558 (84000:
                             Translating the Words of the Buddha, 2016).</note>
-                        <title xml:lang="en">The Great Peahen</title> (<title xml:lang="Sa-Ltn">Mahāmāyūrīvidyārājñī</title>, Toh 559),<ref rend="pending" target="http://read.84000.co/translation/toh559.html"/>
-                        <title xml:lang="en">The Sūtra of the Great Cool Grove</title> (<title xml:lang="Sa-Ltn">Mahā­śītavatī­sūtra</title>, Toh 562),<ref rend="pending" target="http://read.84000.co/translation/toh562.html"/>
+                        <title xml:lang="en">The Great Peahen</title> (<title xml:lang="Sa-Ltn">Mahāmāyūrīvidyārājñī</title>, Toh 559),<note place="end" xml:id="UT22084-090-005-1001">Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh559.html">The Queen of Incantations: The Great Peahen
+                            </ref>
+                            </title>, Toh 559 (84000: Translating the Words of the 
+                            Buddha, 2023).</note>
+                        <title xml:lang="en">The Sūtra of the Great Cool Grove</title> (<title xml:lang="Sa-Ltn">Mahā­śītavatī­sūtra</title>, Toh 562),<note place="end" xml:id="UT22084-090-005-1003">Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh562.html">Great Cool Grove
+                            </ref>
+                            </title>, Toh 562 (84000: Translating the Words of the 
+                            Buddha, 2023).</note>
                         and <title xml:lang="en">Great Upholder of the Secret Mantra</title> (<title xml:lang="Sa-Ltn">Mahā­mantrānusāriṇī­sūtra</title>, Toh 563).<note place="end" xml:id="UT22084-090-005-8"> Dharmacakra Translation
                             Committee, trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh563.html">Great
@@ -2912,6 +2926,18 @@
                             Culture and Political Life in Early Medieval India</title>. Cambridge
                         Studies in Indian History and Society. Cambridge: Cambridge University
                         Press, 2006.</bibl>
+                    <bibl xml:id="UT22084-090-005-1002">Dharmachakra Translation Committee, trans. 
+                        <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh559.html">The Queen of Incantations: The Great Peahen
+                        </ref>
+                        </title> 
+                        (Toh 559). 84000: Translating the Words of the Buddha, 2023.</bibl>
+                    <bibl xml:id="UT22084-090-005-1004">———(2023). trans. 
+                        <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh562.html">Great Cool Grove
+                        </ref>
+                        </title> 
+                        (Toh 562). 84000: Translating the Words of the Buddha, 2023.</bibl>
                     <bibl xml:id="UT22084-090-005-400">Edgerton, Franklin. <title xml:lang="en">Buddhist Hybrid Sanskrit Dictionary</title>. Vol. 2, <title xml:lang="en">Dictionary</title>. New Delhi: Motilal Banarsidass,
                         1998.</bibl>
                     <bibl xml:id="UT22084-090-005-401">Herrmann-Pfandt, Adelheid. <title xml:lang="de">Die lHan kar ma: ein früher Katalog der ins Tibetische
@@ -3961,9 +3987,8 @@
                         <gloss type="person" xml:id="UT22084-090-005-804">
                             <term type="translationMain">Dānaśīla</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">dānaśīla</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">da
-                                na shi la</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ད་ན་ཤི་ལ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dA na shI la</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">དཱ་ན་ཤཱི་ལ།</term>
                             <note type="definition">
                                 <p>An Indian scholar who was resident in Tibet during the late
                                     eighth and early ninth centuries.</p>
@@ -4775,8 +4800,8 @@
                         <gloss type="person" xml:id="UT22084-090-005-882">
                             <term type="translationMain">Śāriputra</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śāriputra</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">sha ri’i bu</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤ་རིའི་བུ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">shA ri’i bu</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤཱ་རིའི་བུ།</term>
                         </gloss>
                     </item>
                     <item>
@@ -5305,9 +5330,8 @@
                         <gloss type="place" xml:id="UT22084-090-005-936">
                             <term type="translationMain">Magadha</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">magadha</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ma
-                                ga d+ha</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མ་ག་དྷ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ma ga d+hA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མ་ག་དྷཱ།</term>
                         </gloss>
                     </item>
                     <item>
@@ -5371,9 +5395,8 @@
                         <gloss type="place" xml:id="UT22084-090-005-943">
                             <term type="translationMain">Vārāṇasī</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">vārāṇasī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ba
-                                ra na si</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བ་ར་ན་སི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bA rA Na sI</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཱ་རཱ་ཎ་སཱི།</term>
                         </gloss>
                     </item>
                     <item>
